<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="24dp"
    tools:context="com.ison.myapp.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="385dp"
        android:layout_height="217dp"
        app:srcCompat="@drawable/banner"
        tools:layout_editor_absoluteY="-5dp"
        tools:layout_editor_absoluteX="0dp"
        android:contentDescription="@string/singapore" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="91dp"
        android:layout_height="31dp"
        android:text="@string/singapore"
        android:textSize="24sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Button"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/camera_value"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.47"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/settings_value"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.578"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="46dp"
        android:layout_height="26dp"
        android:text="@string/camera"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="46dp"
        android:layout_height="26dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="248dp"
        android:text="@string/singapore_text"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


    <AnalogClock
        android:layout_width="400dp"
        android:layout_height="400dp"
        android:dial="@mipmap/timg"
        android:hand_hour="@mipmap/clock_shi"
        android:hand_minute="@mipmap/clock_fen"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"/>

</android.support.constraint.ConstraintLayout>
